# ai-learning

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
modules/cv_to_salary/: main.py  utils.py
modules/cv_to_salary/tools/: get_cv_data.py  process_cv_ocr.py  search_salary_info.py
modules/financial_analysis/: main.py  utils.py
modules/financial_analysis/tools/: broadcast.py  generate_analysis.py  research_plan.py  resource_search.py  self_reflection.py
modules/learning_path_generator/: main.py  utils.py
modules/learning_path_generator/tools/: broadcast.py  generate_learning.py  research_plan.py  resource_search.py  self_reflection.py
